# cvlegacy

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/cvlegacy/: __init__.py  snake.py
tests/: test_snake.py
