[metadata]
name = cvlegacy
version = 0.1.0
author = Hairong Qi
author_email = hqi@utk.edu
description = A collection of commonly used legacy computer vision algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hqiutk/cvlegacy.git
project_urls = 
    Bug Tracker = https://github.com/hqiutk/cvlegacy/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    opencv-python

[options.packages.find]
where = src

[options.extras require]
dev = 
    pytest
    black